--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vercel": "^8.2.1",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "gsap": "^3.14.2",
     "tailwindcss": "^3.3.3",
     "typed.js": "^2.1.0"
   }
